# polymarket-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_PROCESS.md  config.toml.example  polymarket-mcp.service  release-please-config.json  release.sh  update_readme.py
.github/workflows/: ci.yml  release.yml  update-readme.yml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  polymarket_client.rs
tests/: integration_test.rs
