[package]
name = "polymarket-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for Polymarket prediction market data"
license = "MIT"
repository = "https://github.com/0x79de/polymarket-mcp"

[dependencies]
# MCP Rust SDK
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "macros"] }

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-std"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }

anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }

thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

config = "0.14"
dotenv = "0.15"


clap = { version = "4.0", features = ["derive"] }

fastrand = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
